fix words wrap

--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ ul {
 
 .overflow {    
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .bg-grey {
@@ -105,7 +106,7 @@ li:hover {
     min-width: 180px;
     max-width: 600px;
     text-align: justify;
-    text-justify: inter-word;
+    word-wrap: break-word;
 }
 
 .message-received {
